# lfg

./: .gitignore  Cargo.toml  README.md  showcase.sh
examples/hooks/: boopifier-codex.json  codex-boopifier.json  codex-boopifier.toml  codex-standalone.json  codex-standalone.toml  lfg-hook.sh
examples/opencode/: README.md  lfg-bridge.js  opencode.json.example
src/: ble.rs  db.rs  event.rs  gateway.rs  http.rs  main.rs  render.rs  sprites.rs  state.rs
