[package]
name = "lfg"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
btleplug = "0.11"
image = { version = "0.25", features = ["gif", "png"] }
gif = "0.14"
color_quant = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
crc32fast = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.33", features = ["bundled"] }
